try to remove overflow-y for scroll issues

--- a/src/css/components/layout.css
+++ b/src/css/components/layout.css
@@ -16,6 +16,6 @@ body {
 
 @media screen and (max-width: 850px) {
   .layout__main_wrapper {
-    overflow-y: scroll;
+    /* overflow-y: scroll; */
   }
 }
